# otel-analyzer-mcp

./: .gitignore  README.md  pyproject.toml
power/: POWER.md  mcp.json
src/otel_mcp/: server.py
