[project]
name = "otel-mcp"
version = "0.1.0"
description = "MCP server for analyzing OpenTelemetry traces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "opentelemetry-proto>=1.20.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
]

[project.scripts]
otel-mcp = "otel_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otel_mcp"]
